--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@thirdweb-dev/react": "^3.14.20",
+    "@thirdweb-dev/sdk": "^3.10.40",
     "@types/node": "20.4.5",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "ethers": "^5.7.2",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
