--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.3",
